--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Clipboard integration (macOS)
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+
+# Selection highlight
+set -g mode-style "fg=black,bg=yellow"
