tmux: stay in copy mode after yank

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ bind l select-pane -R
 
 # Clipboard integration (macOS)
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi y send -X copy-pipe "pbcopy"
 
 # Selection highlight
 set -g mode-style "fg=black,bg=yellow"
