tmux: split panes keep current path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Split panes keep current path
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Clipboard integration (macOS)
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-pipe "pbcopy"
