shell configs: cross-platform, modular aliases
- .zshrc: OS conditionals, load ~/.aliases.d/, cleanup
- .tmux.conf: cross-platform clipboard (pbcopy/xclip)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,9 +16,11 @@ bind l select-pane -R
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-# Clipboard integration (macOS)
+# Clipboard (cross-platform)
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send -X copy-pipe "pbcopy"
+if-shell "uname | grep -q Darwin" \
+  "bind -T copy-mode-vi y send -X copy-pipe 'pbcopy'" \
+  "bind -T copy-mode-vi y send -X copy-pipe 'xclip -selection clipboard'"
 
 # Selection highlight
 set -g mode-style "fg=black,bg=yellow"
