--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ bind C-] send-prefix
 
 setw -g mode-keys vi
 set -g mouse on
+set -g renumber-windows on
 
 # Pane navigation (hjkl)
 bind h select-pane -L
