misc: conventions, scripts, docs
- conventions/chartering: agent guide + CLAUDE.md
- scripts: ax, rx, vx, move-session.sh
- CLAUDE.md updates, aerospace.toml tweak
- workspaces/kpler updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # License keys (sensitive)
 macos-licenses.md
 
+# Claude Code runtime dirs (should not appear but safety net)
+claude/cache/
+claude/debug/
+claude/plans/
+claude/plugins/
+
 # macOS
 .DS_Store
