aerospace: modal workspace nav 10-29
ctrl-alt-q/w: move to tens/twenties
ctrl-q/w: goto tens/twenties
0-9: select ones digit
esc: cancel

--- a/aerospace.toml
+++ b/aerospace.toml
@@ -45,6 +45,63 @@ alt-tab = 'workspace-back-and-forth'
 alt-shift-c = 'reload-config'
 alt-r = 'mode resize'
 
+ctrl-alt-q = 'mode tens'
+ctrl-alt-w = 'mode twenties'
+ctrl-q = 'mode goto-tens'
+ctrl-w = 'mode goto-twenties'
+
+[mode.tens.binding]
+0 = ['move-node-to-workspace 10', 'mode main']
+1 = ['move-node-to-workspace 11', 'mode main']
+2 = ['move-node-to-workspace 12', 'mode main']
+3 = ['move-node-to-workspace 13', 'mode main']
+4 = ['move-node-to-workspace 14', 'mode main']
+5 = ['move-node-to-workspace 15', 'mode main']
+6 = ['move-node-to-workspace 16', 'mode main']
+7 = ['move-node-to-workspace 17', 'mode main']
+8 = ['move-node-to-workspace 18', 'mode main']
+9 = ['move-node-to-workspace 19', 'mode main']
+esc = 'mode main'
+
+[mode.twenties.binding]
+0 = ['move-node-to-workspace 20', 'mode main']
+1 = ['move-node-to-workspace 21', 'mode main']
+2 = ['move-node-to-workspace 22', 'mode main']
+3 = ['move-node-to-workspace 23', 'mode main']
+4 = ['move-node-to-workspace 24', 'mode main']
+5 = ['move-node-to-workspace 25', 'mode main']
+6 = ['move-node-to-workspace 26', 'mode main']
+7 = ['move-node-to-workspace 27', 'mode main']
+8 = ['move-node-to-workspace 28', 'mode main']
+9 = ['move-node-to-workspace 29', 'mode main']
+esc = 'mode main'
+
+[mode.goto-tens.binding]
+0 = ['workspace 10', 'mode main']
+1 = ['workspace 11', 'mode main']
+2 = ['workspace 12', 'mode main']
+3 = ['workspace 13', 'mode main']
+4 = ['workspace 14', 'mode main']
+5 = ['workspace 15', 'mode main']
+6 = ['workspace 16', 'mode main']
+7 = ['workspace 17', 'mode main']
+8 = ['workspace 18', 'mode main']
+9 = ['workspace 19', 'mode main']
+esc = 'mode main'
+
+[mode.goto-twenties.binding]
+0 = ['workspace 20', 'mode main']
+1 = ['workspace 21', 'mode main']
+2 = ['workspace 22', 'mode main']
+3 = ['workspace 23', 'mode main']
+4 = ['workspace 24', 'mode main']
+5 = ['workspace 25', 'mode main']
+6 = ['workspace 26', 'mode main']
+7 = ['workspace 27', 'mode main']
+8 = ['workspace 28', 'mode main']
+9 = ['workspace 29', 'mode main']
+esc = 'mode main'
+
 [mode.resize.binding]
 h = 'resize width -50'
 j = 'resize height +50'
